--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://postgres:qsczse@localhost:5432/fivepm
 DJANGO_ENV=development
 SECRET_KEY='django-insecure-v1mn@h_b8h^30*q%(((oo$r2^gldxyj5&57+pk+g!&(=hc)1*_'
+SHOULD_ALLOW_LOCALHOST=False
