--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "babel-loader": "^8.2.2",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
